# SMPLTools

./: CMakeLists.txt  LICENSE  README.md
Resources/Python/: LoadPickle.py
Source/Lib/: CMakeLists.txt
Source/Lib/Private/: Animation.cpp  Load.cpp  PyHelpers.cpp  Save.cpp
Source/Lib/Public/: Animation.hpp  Config.hpp  Config.inl  Load.hpp  MeshModifier.hpp  Model.hpp  PyConvert.hpp  PyHelpers.hpp  Save.hpp  Vector.hpp
Source/Lib/Test/: CMakeLists.txt  PrintSMPLProperties.cpp  TestAnimation.cpp  TestLoad.cpp  TestSaveFBX.cpp
cmake/: GroupSource.cmake  PrintList.cmake
